# kflowd

./: .gitignore  gh-stats-clones-14d.json  gh-stats-clones-all  gh-stats-clones.json  gh-stats-version.json  gh-stats-views-14d.json  gh-stats-views-all  gh-stats-views.json
.github/workflows/: dirt-ci.yml  kflowd-ci.yml
dirt/.cargo/: config.toml
dirt/dirt/: Cargo.toml
dirt/dirt-ebpf/: Cargo.toml
dirt/dirt-ebpf/src/: main.rs
dirt/dirt/src/: main.rs
kflowd-bpf-rs/: Cargo.toml
kflowd-bpf-rs/.cargo/: config.toml
kflowd-bpf-rs/src/: main.rs
kflowd-common/: Cargo.toml
kflowd-common/src/: lib.rs
src/: Makefile  dirt.bpf.c  dirt.c  dirt.h  dirt.service  kflowd.bpf.c  kflowd.c  kflowd.h
src/.output/: kflowd.skel.h
src/.output/bpf/: bpf.h
src/dirt_rs/: .gitignore  Cargo.toml
src/dirt_rs/src/: main.rs
src/rust/dirt_rs/: Cargo.toml  README.md
src/rust/dirt_rs/dirt_rs/: Cargo.toml  build.rs
src/rust/dirt_rs/dirt_rs-common/: Cargo.toml
src/rust/dirt_rs/dirt_rs-common/src/: lib.rs
src/rust/dirt_rs/dirt_rs-ebpf/: Cargo.toml
src/rust/dirt_rs/dirt_rs-ebpf/src/: main.rs
src/rust/dirt_rs/dirt_rs/src/: main.rs
src/rust_bpf/: Cargo.toml
src/rust_bpf/.cargo/: config.toml
src/rust_bpf/src/: lib.rs  vmlinux.rs.tmp_out
src/rust_bpf/xtask/: Cargo.toml
src/rust_bpf/xtask/src/: main.rs
src/rust_bpf_program/: Cargo.toml
src/rust_bpf_program/src/: bindings.rs  lib.rs  main.rs
tests/: test_unix_socket.sh
vmlinux/x86/: vmlinux_508.h
