[package]
name = "kflowd-bpf-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
# Updated for aya 0.13.1 compatibility
aya = { version = "0.13.1", features = ["async_tokio"] }
aya-log = "0.2.1"
aya-ebpf-macros = { version = "0.1.1" } # Added explicit dependency

libc = "0.2"
kflowd-common = { path = "../kflowd-common" }

[[bin]]
name = "kflowd-bpf"
path = "src/main.rs"
