[package]
name = "dirt_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libbpf-sys = "=1.5.0"
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.8.1"
nix = { version = "0.27.1", features = ["user", "process", "feature"] }
clap = { version = "4.4.7", features = ["derive"] }
libbpf-rs = "0.25.0"
tokio = { version = "1", features = ["full"] }
chrono = "0.4"
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
