[package]
name = "dirt_bpf"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
aya = { version = "0.11", features = ["async_tokio"] }
aya-log = "0.1"
anyhow = "1.0"
thiserror = "1.0"
# Assuming tokio for async runtime, common with Aya examples
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "net", "signal"] }

# For logging
env_logger = "0.9"
log = "0.4"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "dirt-ebpf-loader" # Placeholder for a potential loader, not the bpf program itself
path = "src/main.rs" # Assuming a loader would live in src/main.rs relative to this Cargo.toml
