[package]
name = "dirt_bpf"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
aya-ebpf = "0.1.1"
aya-ebpf-macros = "0.1.1"
aya-log-ebpf = "0.1.1"
anyhow = "1.0"                                        # Typically for userspace loader
thiserror = "1.0"                                     # Typically for userspace loader
# Assuming tokio for async runtime, common with Aya examples
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "net", "signal"] } # Typically for userspace loader

# For logging (userspace)
env_logger = "0.9"                                    # Typically for userspace loader
log = "0.4"                                           # Used by both, but configured by loader

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "dirt-ebpf-loader" # Placeholder for a potential loader, not the bpf program itself
path = "src/main.rs" # Assuming a loader would live in src/main.rs relative to this Cargo.toml
